--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <!--large screens header-->
-  <div class="w3-display-middle w3-hide-small" style="white-space: nowrap;">
+  <div class="w3-display-middle w3-hide-small w3-animate-opacity" style="white-space: nowrap;">
+    <img class="logo-d" src="src/img/android-chrome-512x512.png" style="position: relative; margin:0; top: -5px; left: 13px; float: left; height: 53px;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-left">AMANDLA ENDODA BUTCHERY</span>
+	<img class="logo-d" src="src/img/android-chrome-512x512.png" style="position: relative; float: left; left: 620px; top: -48px; height: 53px;">
   </div>
   <!--header on small screens-->
   <div id="mobile-div" class="w3-display-middle w3-card-4 w3-black w3-hide-large w3-hide-medium w3-animate-opacity">
-    <h1 class="w3-center w3-padding-large w3-animate-opacity" style="font-size: 25px; font-family: courier new;"><center>AMANDLA ENDODA</center> <center>BUTCHERY</center></h1>
+    <img class="logo-m" src="src/img/android-chrome-512x512.png" style="position: absolute; top: 15px; left: 50px; height: 100px; z-index: -1;">
+    <h1 class="w3-center w3-padding-large w3-animate-opacity" style="font-size: 30px; font-family: courier new;"><center>AMANDLA ENDODA</center> <center>BUTCHERY</center></h1>
   </div>
 </div>
 
@@ -71,14 +74,14 @@
 <div class="bgimg-2 w3-opacity-min" style="padding-top: 55px; margin-bottom: 60px;">
   <!--Products--> 
   <div class="w3-center w3-hover-opacity-off">
-    <button class="w3-button w3-black" id="coll-btn" onclick="collapsefunct()" data-toggle="collapse" data-target="#prods" style="height: 60px; width: 200px;">PRODUCTS<i id="glyph2" class="fa fa-arrow-down w3-margin-left"></i></button>
+    <button class="w3-button w3-black" id="coll-btn" onclick="collapsefunct()" data-toggle="collapse" data-target="#prods" style="height: 60px; width: 200px; box-shadow: 0 6px 10px 0  grey inset;">PRODUCTS<i id="glyph2" class="fa fa-arrow-down w3-margin-left"></i></button>
   </div>
 </div>
 
 <div class="w3-products-container collapse" id="prods">
   <center><h2>PRODUCTS</h2></center>
   <div class="w3-center">
-    <h4>Below is an example of our main products <em>based on our unit price(per killogram).</em></h4>
+    <h4><em>Below is an example of our main products based on our unit price(per killogram).</em></h4>
   </div>
  <div class="products">
   <div class="product w3-card-2" style="background-color: #FFFFFF; margin: 15px;">
