--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ image[1] = "url('https://atasteozimboivyskitchenette.files.wordpress.com/2016/10
 image[2] = "url('https://apps.tsn.go.tz/public/uploads/937557082e8c3532a519f5cebdf370c5.jpg');";
 image[3] = "url('https://sc04.alicdn.com/kf/U9aac5cb8d59144379f67aac598bbe2c0D.jpg');";
 var n = 1;
-//window.setInterval(change, 3000);
+window.setInterval(change, 3000);
 function change(){
 	if(n>=image.length){
 	    n=0;
